--- a/atendimento.html
+++ b/atendimento.html
@@ -16,9 +16,9 @@
         <div class="merda">
             <ul>
                 <li><a href="erro.html" title="Categorias"><i class="fas fa-bars"></i></a></li>
-                <li><a href="home.html"  title="Home"><i class="fas fa-home"></i></a></li>
+                <li><a href="index.html"  title="Home"><i class="fas fa-home"></i></a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
-                <li><a href="conta.html">Minha conta</a></li>
+                <li><a href="conta.html" title="Minha Conta"><i class="fas fa-user-alt"></i></a></li>
             </ul>
             <div class="logo">
                 <img id="icone" src="IMG05.png">
