--- a/sucesso.html
+++ b/sucesso.html
@@ -14,7 +14,7 @@
     <header id="cabecalho">
         <div class="merda">
             <ul>
-                <li><a href="home.html"  title="Voltar"><i class="fas fa-undo-alt"></i></a></li>
+                <li><a href="index.html"  title="Voltar"><i class="fas fa-undo-alt"></i></a></li>
             </ul>
         </div>
         <h1>CADASTRADO</h1>
