--- a/conta.html
+++ b/conta.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="erro.html" title="Categorias"><i class="fas fa-bars"></i></a></li>
                 <li><a href="index.html"  title="Home"><i class="fas fa-home"></i></a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="cadastro.html" title="Cadastro"><i class="fas fa-plus-circle"></i></a></li>
                 <li><a href="conta.html" title="Minha Conta"><i class="fas fa-user-alt"></i></a></li>
             </ul>
             <div class="logo">
