--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         <div class="input-conteiner">
             <div class="menu-header-search">
-                <input class="mh-search-input" id="search" type="text" name="buscar" value maxlength="50" placeholder="O que você procura ?" autocomplete="off">
+                <input class="mh-search-input" id="search" type="text" name="buscar" value maxlength="50" autocomplete="off">
                 <button class="botao" id="butao" type="submit" name="botao"title="Buscar" onclick="fail()"><span>Buscar</span><i class="fas fa-search"></i></button>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <header id="cabecalho-artigo">
                     <hgroup>
                         <h3>Ofertas</h3> 
-                        <h3 class="direita">2018</h3>
+                        <h3 class="direita">2019</h3>
                     </hgroup>
                 </header>
                 <h2>Dorflex</h2>
