--- a/atendimento.html
+++ b/atendimento.html
@@ -33,8 +33,10 @@
         <img id="icone1" src="manutencao.png">
         <h4>PÁGINA EM CONSTRUÇÃO</h4>
     </div>  
-<footer id="rodape">
-    <p>Copyright &copy; 2019 Victor Luan <br/>
-</footer>
+    <footer id="rodape">
+            <p>Copyright &copy; 2019 Victor Luan <br/>
+                <img src="linkdin.png">
+                <img src="github.png">
+        </footer>
 </body>
 </html>
