--- a/cadastro.html
+++ b/cadastro.html
@@ -114,8 +114,10 @@
             
         </form>
     </div>
-        <footer id="rodape">
+    <footer id="rodape">
             <p>Copyright &copy; 2019 Victor Luan <br/>
+                <img src="linkdin.png">
+                <img src="github.png">
         </footer>
     </body>
     </html>
