--- a/copia.html
+++ b/copia.html
@@ -17,8 +17,9 @@
                 <li><a href="index.html"  title="Voltar"><i class="fas fa-undo-alt"></i></a></li>
             </ul>
         </div>     
-            <h1>CADASTRADO</h1>
-           </header>
+        <h1>PEDIDO #201900001 | 
+            VOCÊ RECEBERÁ UM E-MAIL DE CONFIRMAÇÃO</h1>
+    </header>
     <div id="interface">
         <img id="icone1" src="IMG04.png"/>
                 <article id="principal">
