--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </figure>
                     <div class="row">
                         <h3>R$29,97</h3>
-                        <input type="submit" id="butao" value="Comprar" onclick="fail()">
+                        <input type="submit" id="butao" value="Comprar" onclick="carrinho()">
                     </div>
                     <h2>Dipirona</h2>
                     <p></p>
@@ -88,6 +88,8 @@
                 </div>
                 <footer id="rodape">
                     <p>Copyright &copy; 2019 Victor Luan <br/>
+                        <img src="linkdin.png">
+                        <img src="github.png">
                 </footer>
             </body>
             </html>
