--- a/carrinho.html
+++ b/carrinho.html
@@ -44,8 +44,10 @@
             </form>
         </div>   
     </div>
-        <footer id="rodape">
+    <footer id="rodape">
             <p>Copyright &copy; 2019 Victor Luan <br/>
-            </footer>
+                <img src="linkdin.png">
+                <img src="github.png">
+        </footer>
     </body>
     </html>
