--- a/erro.html
+++ b/erro.html
@@ -25,8 +25,10 @@
                     <header id="cabecalho-artigo"></header>  
                 </article>                
     </div>
-<footer id="rodape">
-    <p>Copyright &copy; 2019 Victor Luan <br/>
-</footer>
+    <footer id="rodape">
+            <p>Copyright &copy; 2019 Victor Luan <br/>
+                <img src="linkdin.png">
+                <img src="github.png">
+        </footer>
         </body>
         </html>
