--- a/cadastro.html
+++ b/cadastro.html
@@ -31,7 +31,7 @@
     </header>
     
     <div id="interface">
-        <form id="form#1" name="myForm" method="POST" action="processa.php">
+        <form id="form#1" name="myForm" method="POST" action="acao.php">
             <div class="row">
                 <div class="col-25">
                     <label for="fname">Nome</label>
